feat: mail & socket service

--- a/package.json
+++ b/package.json
@@ -26,15 +26,20 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.15",
     "@nestjs/swagger": "^8.1.1",
+    "@nestjs/websockets": "^10.4.15",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
+    "handlebars": "^4.7.8",
     "lodash": "^4.17.21",
     "mongoose": "^8.12.1",
+    "nodemailer": "^7.0.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
